<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scrllvwNo1"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center">
			<TextView android:id="@+id/tvBigTitle" android:text="@string/bigTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center_horizontal" android:textSize="22dip" />
			<View android:layout_width="fill_parent" android:layout_height="1dip"
				android:layout_marginTop="8dip"
				android:background="@android:drawable/divider_horizontal_dim_dark" />
			<CheckBox android:checked="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/chkBeginTime"
				android:gravity="center_vertical" android:enabled="false"
				android:text="@string/txtBeginDate"></CheckBox>
			<TimePicker android:id="@+id/tpFlightTime"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
			<CheckBox android:checked="false" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/chkEndTime"
				android:editable="true" android:gravity="center_vertical"
				android:text="@string/txtEndDate"></CheckBox>
			<TimePicker android:id="@+id/tpFlightOutTime"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
			<Button android:text="Sauver" android:id="@+id/btnSavePref"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
